<resources>
    <string name="app_name">Utang</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dipinjam">Dipinjam</string>
    <string name="meminjam">Meminjam</string>

    <string name="tanggal_peminjaman">Tanggal Peminjaman</string>
    <string name="tanggal_pembayaran">Tanggal Pembayaran</string>
    <string name="nama">Nama</string>
    <string name="jumlah">Jumlah</string>
...
