...
            app:fabCradleRoundedCornerRadius="100dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:navigationIcon="@drawable/ic_chart_24dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingbutton_main_utang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_anchor="@id/bottom_app_bar"/>

...
